--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       outputDiv.innerHTML = "Generating poster...";
 
       try {
-        const response = await fetch("https://n8n-poster-gen.onrender.com", {
+        const response = await fetch("https://n8n-poster-gen.onrender.com/webhook/generate-poster", {
           method: "POST",
           headers: {
             "Content-Type": "application/json"
