--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       background-color: #f4f4f4;
       color: #333;
       padding: 2rem;
-      max-width: 600px;
       margin: auto;
     }
 
@@ -53,6 +52,7 @@
     .output {
       margin-top: 3rem;
       text-align: center;
+      display: flex;
     }
 
     .output img {
@@ -65,10 +65,14 @@
       font-size: 1.1rem;
       color: #555;
     }
+    #posterForm{
+      max-width: 600px;
+      justify-self: center;
+    }
   </style>
 </head>
 <body>
-  <h1>Poster Generator v1.2</h1>
+  <h1>Poster Generator v1.23</h1>
   <form id="posterForm">
     <label>Company Name</label>
     <input type="text" name="company_name" required value="Oqulix Private Limited"/>
@@ -101,7 +105,7 @@
       outputDiv.innerHTML = "Generating poster...";
 
       try {
-        const response = await fetch("http://localhost:5678/webhook/generate-poster", {
+        const response = await fetch("https://n8n-poster-gen.onrender.com/webhook-test/generate-poster", {
           method: "POST",
           headers: {
             "Content-Type": "application/json"
