--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       margin-top: 3rem;
       text-align: center;
       display: flex;
-      align-items: center;
+      align-items: start;
       justify-content: center;
       gap: 50px;
       flex-wrap: wrap;
